--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<h1>finally I am a developer proud of myself.<\h1>
-<h2>congratulation to me thumps up.<\h2>
+<h1>finally peace is a developer proud of myself.</h1>
+<h2>congratulation to me thumps up.</h2>
+<h3>show me a man who is diligent in his ways he shall stand before king and not mean men.</h3>
+<h4>I would love to be a great programmer who would be able to impact what I have learnt to does who desire to learn.</h4>
